--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "weather",
   "version": "1.0.0",
   "main": "index.js",
+  "bin":{
+    "weather": "./dist/index.js"
+  },
   "scripts": {
     "build": "build tsc ./src/index.js -o  ./dist/index.js",
-    "dev": "nodemon ./dist/index.js"
+    "dev": "nodemon ./dist/index.js",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.12.0",
     "axios": "^1.7.9",
+    "commander": "^13.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
