--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "weather": "./dist/index.js"
   },
   "scripts": {
-    "build": "build tsc ./src/index.js -o  ./dist/index.js",
+    "build": "build tsc ./src/index.ts -o  ./dist/index.js",
+    "build-weather":"build tsc ./src/weatherSDK.ts -o  ./dist/weatherSDK.js",
     "dev": "nodemon ./dist/index.js",
     "start": "node ./dist/index.js"
   },
@@ -17,7 +18,6 @@
   "dependencies": {
     "@types/axios": "^0.14.4",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.12.0",
     "axios": "^1.7.9",
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
@@ -27,5 +27,9 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^22.12.0",
+    "@types/validator": "^13.12.2"
+  }
 }
