--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "build tsc ./src/index.ts -o  ./dist/index.js",
-    "build-weather":"build tsc ./src/weatherSDK.ts -o  ./dist/weatherSDK.js",
+    "build-weather":"tsc ./src/weatherSDK.ts -o  ./dist/weatherSDK.js",
     "dev": "nodemon ./dist/index.js",
     "start": "node ./dist/index.js"
   },
