--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "build tsc ./src/index.ts -o  ./dist/index.js",
-    "build-weather":"tsc ./src/weatherSDK.ts -o  ./dist/weatherSDK.js",
+    "build-weather": "tsc ./src/weatherSDK.ts -o  ./dist/weatherSDK.js",
     "dev": "nodemon ./dist/index.js",
     "start": "node ./dist/index.js"
   },
@@ -22,6 +22,7 @@
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
