--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
-      - run : echo "Hello world!"
+        run : echo "Hello world!"
       - name : Print Goodbye
-      - run : echo "Good Bye!"
+        run : echo "Good Bye!"
       
